# fleet-spread

./: .gitignore  CRITIQUE.md  Cargo.toml  README.md  SPEC-v2.md  SPEC.md
.github/workflows/: ci.yml
docs/: BRIDGE.md
src/: captain.rs  constants.rs  fleet_coordinate_bridge.rs  git_commit.rs  graph.rs  graph_state.rs  lib.rs  library_gate.rs  main.rs  plato_tile.rs  quality.rs  synthesis.rs  task.rs  test_helpers.rs
src/specialists/: algebraic.rs  empirical.rs  geometric.rs  mod.rs  systems.rs  topological.rs
tests/: test_constants.rs  test_library_gate.rs  test_quality_v2.rs  test_specialists.rs  test_synthesis.rs
