[package]
name = "fleet-spread"
version = "0.1.0"
edition = "2021"
description = "Fleet graph analysis across 5 specialist dimensions with synthesis"
license = "MIT"
repository = "https://github.com/SuperInstance/fleet-spread"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
